implement 'open file' and 'semi-open file' impact